--- a/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/AppealsApplications.cshtml
@@ -3,7 +3,28 @@
 
 <a class="govuk-back-link" href="@Url.Action("Index", "Home")" onclick="history.back(); return false;">Back</a>
 @* <a class="govuk-back-link-nolink"></a> *@
+@{
+    Dictionary<string, string> statusColor = new Dictionary<string, string>
+    {
+        {"Entitled", "govuk-tag--green"},
+        {"EvidenceNeeded", "govuk-tag--light-blue"},
+        {"Receiving", "govuk-tag--pink"},
+        {"SentForReview", "govuk--tag-blue"},
+        {"ReviewedEntitled", "govuk--tag-green"},
+        {"ReviewedNotEntitled", "govuk--tag-red"}
+    };
 
+    Dictionary<string, string> statusName = new Dictionary<string, string>
+    {
+        {"Entitled", "Entitled"},
+        {"EvidenceNeeded", "Evidence Needed"},
+        {"Receiving", "Receiving Entitlement"},
+        {"SentForReview", "Sent for Review"},
+        {"ReviewedEntitled", "Reviewed Entitled"},
+        {"ReviewedNotEntitled", "Reviewed Not Entitled"}
+    };
+
+}
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
         <div class="moj-page-header-actions">
@@ -46,13 +67,26 @@
                             <th class="govuk-table__header" scope="col" id="select-all"></th>
                             <th class="govuk-table__header" scope="col">Reference</th>
                             <th class="govuk-table__header" scope="col">Parent / Guardian</th>
+                            <th class="govuk-table__header" scope="col">Parent date of birth</th>
                             <th class="govuk-table__header" scope="col">Child</th>
-                            <th class="govuk-table__header" scope="col">Child date of birth</th>
-                            <th class="govuk-table__header" scope="col"> Status</th>
+                            <th class="govuk-table__header" scope="col">School</th>
                             <th class="govuk-table__header" scope="col">Submission date</th>
                         </tr>
                     </thead>
-                    @Html.EditorFor(model => model.People)
+                    <tbody>
+                        @foreach (var person in Model.People)
+                            {
+                              <tr>
+                                  <td></td>
+                                  <td class="govuk-table__cell">@Html.ActionLink(person.Person.Reference, person.DetailView, "application", new { id = person.Person.Id }, new { @class = "govuk-link" })</td>
+                                    <td class="govuk-table__cell">@(@person.Person.ParentFirstName + " " + @person.Person.ParentLastName)</td>
+                                    <td class="govuk-table__cell">@Convert.ToDateTime(person.Person.ParentDateOfBirth).ToString("dd MMM yyyy")</td>
+                                    <td class="govuk-table__cell">@(@person.Person.ChildFirstName + " " + person.Person.ChildLastName)</td>
+                                    <td class="govuk-table__cell">@(@person.Person.Establishment.Name)</td>
+                                    <td class="govuk-table__cell">@person.Person.Created.ToString("dd MMM yyyy")</td>
+                              </tr>                      
+                            }
+                        </tbody>
                 </table>
 
                 <nav class="govuk-pagination" role="navigation" aria-label="results navigation">
