--- a/CheckYourEligibility-Admin/Views/Application/ApplicationDetail.cshtml
+++ b/CheckYourEligibility-Admin/Views/Application/ApplicationDetail.cshtml
@@ -20,4 +20,17 @@
     </div>
 </div>
 
+@if (Model.Status.Equals("EvidenceNeeded")){
+<div class="govuk-width-container">
+    <div class="govuk-grid-row">
+        <div class="govuk-grid-column-full">
+            <p class="govuk-heading-s">Once you've received evidence from this parent or guardian:</p>
+            <ol class="govuk-list govuk-list--number">
+                <li>Send it to your local authority contact along with the application reference number. Typically this would happen via email.</li>
+                <li>Select ‘Send for review’ on this page. This will notify the local authority that the free school meals application is ready for their attention.</li>
+            </ol>
+        </div>
+    </div>
+</div>
+}
 @Html.Partial("ApplicationDetailPartial", Model)
