--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                     beta
                 </strong>
                 <span class="govuk-phase-banner__text">
-                    This is a new service - your <a class="govuk-link" href="@Configuration["FeedbackUrl"]">feedback</a> will help us to improve it.
+                    This is a new service - your <a class="govuk-link" href="@Configuration["FeedbackUrl"]" target="_blank">feedback</a> will help us to improve it.
                 </span>
             </p>
         </div>
