--- a/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
+++ b/CheckYourEligibility-Admin/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 </head>
 
 <body class="govuk-template__body  js-enabled" data-clarity="@clarityId">
-    <div id="cookie-banner" class="govuk-cookie-banner" role="region" aria-label="Cookies on Check a family's eligibility" data-nosnippet style="display:none;">
+    <div id="cookie-banner" class="govuk-cookie-banner nojshide" role="region" aria-label="Cookies on Check a family's eligibility" data-nosnippet>
         <div class="govuk-cookie-banner__message govuk-width-container">
             <div class="govuk-grid-row">
                 <div class="govuk-grid-column-two-thirds">
