Remove id=content from outcome pages as it already exists in the loader page so doesn't get recognised unless page is refreshed.

--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Data_Issue.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Data_Issue.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Could not check eligibility";
 }
 
-<div id="content" data-type="ErrorData">
+<div data-type="ErrorData">
     <a class="govuk-back-link-nolink"></a>
 
     <div class="govuk-error-summary govuk-grid-column-full" data-module="govuk-error-summary">
