--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
@@ -2,10 +2,10 @@
     ViewData["Title"] = "Could not check eligibility";
 }
 
-<div id="content" data-type="ErrorNotAccepted">
+<div data-type="ErrorNotAccepted">
     <a class="govuk-back-link-nolink"></a>
 
-    <div class="govuk-error-summary govuk-grid-column-full" data-module="govuk-error-summary" id="content" data-type="success">
+    <div class="govuk-error-summary govuk-grid-column-full" data-module="govuk-error-summary" data-type="success">
         <div role="alert">
             <h2 class="govuk-error-summary__title">
                 Error – File not accepted
