--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Success.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Success.cshtml
@@ -2,7 +2,7 @@
 <a class="govuk-back-link-nolink"></a>
 
 <div class="govuk-grid-row">
-    <div id="content" class="govuk-grid-column-full" data-type="success">
+    <div class="govuk-grid-column-full" data-type="success">
 
         <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
             <div class="govuk-notification-banner__header">
