--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible_LA.cshtml
@@ -3,7 +3,7 @@
 <a class="govuk-back-link-nolink"></a>
 
 <div class="govuk-grid-row">
-    <div id="content" class="govuk-grid-column-two-thirds" data-type="Not_Eligible_LA">
+    <div class="govuk-grid-column-two-thirds" data-type="Not_Eligible_LA">
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
                 <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
