--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found_Pending.cshtml
@@ -2,8 +2,7 @@
 <a class="govuk-back-link-nolink"></a>
 
 <div class="govuk-grid-row">
-    <div id="content" class="govuk-grid-column-two-thirds" data-type="Not_Found_Pending">
-
+    <div class="govuk-grid-column-two-thirds" data-type="Not_Found_Pending">
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
                 <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
