--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Error_Not_Accepted.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Could not check eligibility";
 }
 
-<div data-type="ErrorNotAccepted">
+<div id="content" data-type="ErrorNotAccepted">
     <a class="govuk-back-link-nolink"></a>
 
     <div class="govuk-error-summary govuk-grid-column-full" data-module="govuk-error-summary" data-type="success">
