--- a/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Success.cshtml
+++ b/CheckYourEligibility-Admin/Views/BulkCheck/BulkOutcome/Success.cshtml
@@ -1,7 +1,7 @@
 ﻿@* <a class="govuk-back-link" href="#" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row">
+<div id="content" class="govuk-grid-row">
     <div class="govuk-grid-column-full" data-type="success">
 
         <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
