--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Not_Eligible.cshtml
@@ -2,7 +2,7 @@
     @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<div class="govuk-grid-row">
+<div id="content" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds" data-type="Not_Eligible">
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
