--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
@@ -2,7 +2,7 @@
 
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row">
+<div id="content" class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds" data-type="Eligible">
         <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
