--- a/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Admin/Views/Check/Outcome/Technical_Error.cshtml
@@ -2,8 +2,8 @@
 @inject Microsoft.Extensions.Configuration.IConfiguration Configuration
 @* <a class="govuk-back-link-nolink"></a> *@
 
-<div class="govuk-grid-row">
-    <div id="content" class="govuk-grid-column-two-thirds" data-type="Technical_Error">
+<div id="content" class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds" data-type="Technical_Error">
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
                 <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
