--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Eligible.cshtml
@@ -2,8 +2,8 @@
 
 <a class="govuk-back-link-nolink"></a>
 
-<div class="govuk-grid-row">
-    <div id="content" class="govuk-grid-column-two-thirds" data-type="Eligible">
+<div id="content" class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds" data-type="Eligible">
         <div class="govuk-notification-banner govuk-notification-banner--success" role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
                 <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
