--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Not_Found.cshtml
@@ -1,8 +1,8 @@
 ﻿@* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds" data-type="Not_Found">
+<div id="content" data-type="Not_Found" class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
                 <h2 class="govuk-notification-banner__title" id="govuk-notification-banner-title">
