--- a/CheckYourEligibility-Parent/Views/Check/Outcome/Technical_Error.cshtml
+++ b/CheckYourEligibility-Parent/Views/Check/Outcome/Technical_Error.cshtml
@@ -3,8 +3,8 @@
 @* <a class="govuk-back-link" href="/Back" onclick="history.back(); return false;">Back</a> *@
 <a class="govuk-back-link-nolink"></a>
 
-<div id="content" class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds" data-type="Technical_Error">
+<div id="content" data-type="Technical_Error" class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
 
         <div class="govuk-notification-banner" role="region" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner" data-govuk-notification-banner-init="">
             <div class="govuk-notification-banner__header">
